Changes from jTDS 0.9-rc1
=========================

08/28/2004 - Brian Heineman
 o Corrected bug [1017957] 9.1 rc1 and resin 3.0.8 incompatibilities?;
   JtdsDataSource no longer inherits accessors and mutators from another class.

08/24/2004 - Brian Heineman
 o Corrected JDBC compliance test files per Mike Hutchinson's recommendations:
   http://sourceforge.net/forum/message.php?msg_id=2724244
 o Corrected bug [1009233] ResultSet getColumnName, getColumnLabel return wrong
   values; (thanks to Mike Hutchinson for the fix).
 o Added test for bug [1009233] ResultSet getColumnName, getColumnLabel return
   wrong values.
 o Corrected bug [1015543] ResultSetMetaData.isNullable always returns
   columnNoNulls; (thanks to Mike Hutchinson for the bug report and patch).
 o Miscellaneous test clean up.

08/22/2004 - Brian Heineman
 o Corrected bug [1013749] Driver does not support params inside escapes;
   (thanks to Mike Hutchinson for the bug report and patch).
 o Corrected bug [1013819] Cursor downgraded bug;
   (thanks to Mike Hutchinson for the bug report and patch).
 
08/21/2004 - Brian Heineman
 o Applied patch [1013432] Patches for SUN JDBC Compatibility test; (many thanks
   again to Hutchinson for the patch.  The driver now passes the SUN JDBC
   compatibility test suite 1.3.1).  The following issues were also addressed in
   this patch:
     [1012307] PreparedStatement.setObject (java.util.Date) not working;
     (Server not reporting that java.util.Date is not a supported object type)
     [1012301] 0.9-rc1: Prepared statement execution error;
     (Leading spaces cause the parameter marker offsets to be incorrect)
     [1011650] 0.9-rc1: comments get parsed; (Added Joel Fouse's patch plus
     modifications to ensure that driver can cope with comments before the first
     SQL statement).
     [1002971] TimestampTest failures under JDK 1.3 (Possible class cast
     exception in TdsData).
     [1008126] Metadata getTimeDateFunctions() wrong